--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
   "main_script": "src/main.py",
   "gui_template": "src/gui.html",
   "task_location": "workspace_tasks",
-  "icon": "https://i.imgur.com/UiHSrHt.png",
+  "icon": "https://i.imgur.com/UA8cO2d.png",
   "icon_background": "#FFFFFF",
   "disable_stop": true,
   "instance_version": "6.4.16"
