--- a/config.json
+++ b/config.json
@@ -13,5 +13,6 @@
   "icon": "https://i.imgur.com/WDnwFzX.png",
   "icon_background": "#FFFFFF",
   "disable_stop": true,
-  "instance_version": "6.4.16"
+  "instance_version": "6.4.16",
+  "poster": "https://i.imgur.com/d6I6enW.png"
 }
