--- a/config.json
+++ b/config.json
@@ -14,5 +14,5 @@
   "icon_background": "#FFFFFF",
   "disable_stop": true,
   "instance_version": "6.5.1",
-  "poster": "https://i.imgur.com/d6I6enW.png"
+  "poster": "https://user-images.githubusercontent.com/48245050/182403218-5ab9905c-5b79-442e-b8e1-c1a1a274c81d.png"
 }
