--- a/debug.env
+++ b/debug.env
@@ -1,13 +1,13 @@
 PYTHONUNBUFFERED=1
 
-DEBUG_APP_DIR="/Users/max/work/app_debug_data"
-DEBUG_CACHE_DIR="/Users/max/work/app_debug_cache"
+DEBUG_APP_DIR="debug/app_debug_data"
+DEBUG_CACHE_DIR="debug/app_debug_cache"
 LOG_LEVEL="debug"
 
-TASK_ID=20254
+TASK_ID=21818
 
-context.teamId=7
-context.workspaceId=619
+context.teamId=8
+context.workspaceId=349
 context.userId=7
 
 SERVER_ADDRESS="put your value here"
