--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,26 @@
 {
-  "python.pythonPath": ".venv/bin/python",
-  "python.defaultInterpreterPath": ".venv/bin/python",
   "files.exclude": {
     "**/__pycache__": true,
     "venv": true
   },
+  "python.defaultInterpreterPath": ".venv/bin/python",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
   "editor.formatOnType": true,
+  "black-formatter.args": [
+    "--line-length",
+    "100"
+  ],
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "python.formatting.provider": "black",
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter",
+  },
   "debug.inlineValues": "off",
+  "python.analysis.typeCheckingMode": "off",
+  "python.analysis.autoImportCompletions": false
 }
