--- a/config.json
+++ b/config.json
@@ -1,18 +1,15 @@
 {
-    "name": "Import images from cloud storage",
-    "type": "app",
-    "categories": [
-        "import",
-        "images"
-    ],
-    "description": "Import images from cloud (Google Cloud Storage, Amazon S3, Microsoft Azure, ...)",
-    "docker_image": "supervisely/import-export:0.0.5",
-    "main_script": "src/main.py",
-    "gui_template": "src/gui.html",
-    "task_location": "workspace_tasks",
-    "icon": "https://i.imgur.com/WDnwFzX.png",
-    "icon_background": "#FFFFFF",
-    "disable_stop": true,
-    "instance_version": "6.6.8",
-    "poster": "https://user-images.githubusercontent.com/48245050/182403218-5ab9905c-5b79-442e-b8e1-c1a1a274c81d.png"
+	"name": "Import images from cloud storage",
+	"type": "app",
+	"categories": ["import", "images"],
+	"description": "Import images from cloud (Google Cloud Storage, Amazon S3, Microsoft Azure, ...)",
+	"docker_image": "supervisely/import-export:6.72.179",
+	"main_script": "src/main.py",
+	"gui_template": "src/gui.html",
+	"task_location": "workspace_tasks",
+	"icon": "https://i.imgur.com/WDnwFzX.png",
+	"icon_background": "#FFFFFF",
+	"disable_stop": true,
+	"instance_version": "6.6.8",
+	"poster": "https://user-images.githubusercontent.com/48245050/182403218-5ab9905c-5b79-442e-b8e1-c1a1a274c81d.png"
 }
